Slett de gamle feltene for ytelser og dialog (#2116)